2008-07-30  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_motion_notify_cb): Avoid the first jumpy
	effect after reaching the movement thredshold. This way we start
	using the distance after passing the thredshold.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-button.c: (hildon_button_set_property): Use the
	appropriate g_value_get_flags() method.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-docs.sgml:
	* doc/hildon.types:

	 Add the touch pickers, picker dialogs, and picker button widgets
	to the documentation.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-button.c: (hildon_button_set_property),
	(hildon_button_class_init): Make "arrangement-flags" a proper
	G_TYPE_FLAGS derived property.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/Makefile.am: Add below examples.
	* examples/hildon-date-button-example.c:
	* examples/hildon-picker-button-example.c:
	* examples/hildon-picker-button-multicolumn-example.c:
	* examples/hildon-time-button-example.c:
	* examples/hildon-touch-picker-example.c:

	Add examples for the recently added touch pickers,
	picker dialogs,	and picker button widgets.

2008-07-29  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c: Add some API documentation

2008-07-29  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.h
	* src/hildon-button.c
	(hildon_button_new)
	(hildon_button_new_with_text): New constructor to create a button
	with no text at all.
	(hildon_button_init, hildon_button_set_arrangement)
	(hildon_button_set_title, hildon_button_set_value)
	(hildon_button_set_text)
	(hildon_button_construct_child): Hide the value when it's not used
	so the rest of the text is properly aligned.
	Allow creating buttons with arbitrary widgets inside (not just
	title/value labels).

	* examples/hildon-button-example.c (vertical_buttons_window)