@@ -1,3 +1,8 @@
+2008-07-30  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/hildon-button.c: Add API documentation.
+	(hildon_button_set_size_groups): Check input parameters
+
 2008-07-30  Alejandro G. Castro	 <alex@igalia.com>
 
 	* src/hildon-pannable-area.c
